--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
-- name: articulate
+- name: articulate_jenkins_MG
   path: target/articulate-1.0.jar
-  memory: 512M
+  memory: 768M
   random-route: true
 #  host: articulate-jl
   instances: 1
